# cosmologyStudyTool

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
examples/lorentz_viz/: demo.py
examples/minkowski_line_viz/: demo.py  worldline_x1.py
lorentz_viz/: __init__.py  api.py  config.py
lorentz_viz/backends/: base.py  mpl_backend.py  plotly_backend.py
lorentz_viz/core/: __init__.py  invariants.py  transforms.py
minkowski_line_viz/: __init__.py  api.py  config.py
minkowski_line_viz/backends/: base.py  mpl_backend.py
